feat(m10pond1): ✨ renamed routes, added openAPI collection
